kind-cluster/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: ngrok
  rules:
      # Value obtained from Cloud Edge > Domains in the ngrok dashboard 
    - host: REPLACE_THIS_WITH_A_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
